syntax = "proto3";

package ConsoLovers.Ipc;
option csharp_namespace = "ConsoLovers.Ipc.Grpc";

service CancellationService
{
	rpc RequestCancel(RequestCancelRequest) returns (RequestCancelResponse);
}

message RequestCancelRequest 
{    
}

message RequestCancelResponse 
{    
	bool cancelation_accepted= 1;
}

